change top position to 56px (height of the navbar) to fix strange white bg behavior on mobile

--- a/public/stylesheets/flowers.css
+++ b/public/stylesheets/flowers.css
@@ -2,7 +2,7 @@
 	width: 100%;
 	height: 100%;
 	position: fixed;
-	top: 0;
+	top: 56px;
 	left: 0;
 	z-index: -1;
 }
